--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -1,11 +1,11 @@
-NAME = Account
+NAME = FragTrap
 
 
 CXX = c++
 CXXFLAGS = -std=c++98 -Wall -Wextra -Werror -MMD -MP
 CPPFLAGS = -Iincludes
 
-SRCS = tests.cpp Account.cpp
+SRCS = main.cpp ClapTrap.cpp ScavTrap.cpp FragTrap.cpp
 VPATH = srcs
 
 OBJSDIR = objs
